﻿+++++++++++
Python News
+++++++++++

What's New in Python 3.2 Alpha 3?
=================================

*Release date: XX-Oct-2010*

Core and Builtins
-----------------

Library
-------

- Issue #9792: In case of connection failure, socket.create_connection()
  would swallow the exception and raise a new one, making it impossible
  to fetch the original errno, or to filter timeout errors.  Now the
  original error is re-raised.

- Issue #9758: When fcntl.ioctl() was called with mutable_flag set to True,
  and the passed buffer was exactly 1024 bytes long, the buffer wouldn't
  be updated back after the system call.  Original patch by Brian Brazil.

- Updates to the random module:

  * Document which parts of the module are guaranteed to stay the same
    across versions and which parts are subject to change.

  * Update the seed() method to use all of the bits in a string
    instead of just the hash value.  This makes better use of the
    seed value and assures the seeding is platform independent.
    Issue #7889.

  * Improved the random()-->integer algorithm used in choice(),
    shuffle(), sample(), randrange(), and randint().  Formerly, it
    used int(n*random()) which has a slight bias whenever n is not
    a power of two.  Issue #9025.

  * Improved documentation of arguments to randrange().  Issue #9379.

- collections.OrderedDict now supports a new method for repositioning
  keys to either end.

- Issue #9754: Similarly to assertRaises and assertRaisesRegexp, unittest
  test cases now also have assertWarns and assertWarnsRegexp methods to
  check that a given warning type was triggered by the code under test.

- Issue #5506: BytesIO objects now have a getbuffer() method exporting a
  view of their contents without duplicating them.  The view is both readable
  and writable.

- Issue #7566: Implement os.path.sameopenfile for Windows.

- Issue #9293: I/O streams now raise ``io.UnsupportedOperation`` when an